2009-05-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm:  Javascript output using the "name" option now
	initializes the mouse and zoom tracking for each plot.  This will be
	needed in order to embed multiple mouseable plots in a single document.

2008-05-25  Peter Hedwig  <peter@affenbande.org>

	* src/Makefile.am term/lua/ChangeLog term/lua/gnuplot.lua
	 term/lua/gnuplot-lua-tikz.sty term/lua/gnuplot-tikz.help
	 term/lua/gnuplot-tikz.lua term/lua/NEWS term/lua.trm:

	Rearrange internal documentation, improved error handling,
	remove the "script" keyword (script name is now mandatory).

	EAM: term/lua.trm: Create a dummy terminal table for 'tikz' so that
	'set term tikz' can act as a short form of 'set term lua tikz', the
	auto-generated documentation knows about tikz, and GPVAL_TERMINALS
	lists tikz as an available terminal type (requested by Octave).

2009-05-22  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm:  Test for libgd version 2.0.36 or newer.  These allow
	us to specify fonts either by filename or by using the syntax of the
	fontconfig utility.  E.g. "set term png font 'times:italic' 12"

2009-05-17  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm docs/gnuplot.doc: Restore the option of using one of
	libgd's built-in fonts, even if a scalable font is available.
	Begin a reorganization of the documentation dealing with fonts.
	There is now a top level entry "Fonts" in the manual, with subsections
	for font-handling in libgd, PostScript, and cairo (as yet unfinished).

	* term/js/gnuplot_mouse.js (saveclick zoom_in): Do not let the current
	mouse event fall through to also activate default desktop actions.

2009-05-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Initialize xtic_textwidth on entry.

2009-05-11  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm: Broken format specifier.
	Bug #2750114

2009-05-10  Ethan A Merritt  <merritt@u.washington.edu>
